@@ -40,6 +40,8 @@ if __name__ == "__main__":
   APP="update-manager"
   DIR="/usr/share/locale"
 
+  gtk.init_check()
+
   gettext.bindtextdomain(APP, DIR)
   gettext.textdomain(APP)
   gtk.glade.bindtextdomain(APP, DIR)
